--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,42 @@
- 
-/** background image***/
-.bg {
-  /* The image used */
-  background-image: url("images/woodPlatesinBar.jpg") !important;
+ /***gallery style***/
+.gallery {
+-webkit-column-count: 3;
+-moz-column-count: 3;
+column-count: 3;
+-webkit-column-width: 33%;
+-moz-column-width: 33%;
+column-width: 33%; }
+.gallery .pics {
+-webkit-transition: all 350ms ease;
+transition: all 350ms ease; }
+.gallery .animation {
+-webkit-transform: scale(1);
+-ms-transform: scale(1);
+transform: scale(1); }
 
-  /* Half height */
-  height: 50%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+@media (max-width: 450px) {
+.gallery {
+-webkit-column-count: 1;
+-moz-column-count: 1;
+column-count: 1;
+-webkit-column-width: 100%;
+-moz-column-width: 100%;
+column-width: 100%;
 }
+}
+
+@media (max-width: 400px) {
+.btn.filter {
+padding-left: 1.1rem;
+padding-right: 1.1rem;
+}
+}
+ /***gallery style end***/
+
+.bg{
+ 	background-image: url("torobar/images/woodPlatesinBar.jpg") !important;
+ 	background-color: black;
  
-/*** end ***/
+ }
+
+ 
