--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,39 @@
  
 body{
 	background-color: black;
+	font-family: Papyrus, fantasy; 
+	
 }
 
+.text,p {
+	color: #f8f8f8; 
+	font-size: 18px; 
+	font-weight: 500; 
+	line-height: 32px; 
+	margin: 0 0 24px; 
+}
+
+
+
+
+
+
 h1 { 
-	font-family: Papyrus, fantasy; 
+	
 	font-size: 300%; 
 	font-style: normal; 
 	font-variant: normal; 
 	font-weight: bold; 
 	line-height: 200%; 
 } 
+
+.container {
+     margin: auto;
+     width: 50%;
+     border: 3px solid green;
+     padding: 10px;
+     margin-top: 5%;
+}
 
  /***gallery style***/
 .gallery {
